--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ body{
                 }
                 & h2{
                     font-size: 80px;
-                    font-family: fuente-elena-1;
+                    font-family: fuente-elena;
                     margin: 0px;
                     justify-self: end;
                 }
